# sfml

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: release.yml
hello_world/: .clang-tidy  CMakeLists.txt  compile_commands.json  main.cpp  note.md
hello_world/inc/: Orbit.hpp  Star.hpp
hello_world/src/: Orbit.cpp  main.cpp
lib/: CMakeLists.txt
lib/inc/: Observer.hpp
lib/src/: Observer.cpp
solar_system/: .clang-tidy  CMakeLists.txt  README.md  compile_commands.json
solar_system/diagram/: class_diagram.drawio
solar_system/docs/: note.org
solar_system/inc/: CircleOrbit.hpp  Element.hpp  Observer.hpp  Orbit.hpp  RotateElement.hpp  Star.hpp
solar_system/src/: CircleOrbit.cpp  Element.cpp  Observer.cpp  Orbit.cpp  Star.cpp  main.cpp
